


<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    android:background="@drawable/bg2"
    tools:openDrawer="start"
    tools:context=".MainActivity"
    >



    <LinearLayout

        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@drawable/transparent_round_corner">







        <ImageView

            android:layout_width="150dp"
            android:layout_height="38dp"

            android:src="@drawable/ironhubfinal2" />









    </LinearLayout>


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="585dp"
        android:layout_x="0dp"
        android:layout_y="48dp">


        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="585dp"
            android:orientation="vertical">




            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="127dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_round_corner">


                <LinearLayout
                    android:layout_width="337dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/black"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="86dp"
                        android:background="@android:color/transparent"
                        android:text="@string/gain_muscle_text1"
                        android:textColor="@android:color/white"
                        android:textSize="14dp" />


                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="10dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="256dp"

                    android:src="@drawable/bicepcurl" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gain_muscle_text2"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/font"
                    android:textSize="14dp"/>


            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_round_corner">

                <ImageView
                    android:layout_marginStart="10dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/tick"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gain_muscle_text3"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/orange"
                    android:textSize="13dp"
                    android:layout_marginEnd="5dp"/>




            </LinearLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="3dp"
                android:background="@drawable/transparent_round_corner"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"/>


            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="3dp"
                android:background="@drawable/transparent_round_corner"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"/>




                <LinearLayout
                android:layout_width="211dp"
                android:layout_height="31dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/orange"
                >


                <Button
                    android:id="@+id/wourkout_muscle_button"
                    android:layout_width="209dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="1dp"
                    android:background="@android:color/black"
                    android:text="Workout Plan"
                    android:textAllCaps="false"
                    android:textColor="@color/orange"
                    android:textSize="14dp"
                    android:textStyle="bold" />




            </LinearLayout>




        </LinearLayout>


    </ScrollView>


</AbsoluteLayout>

